--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>My First Bitstater</title>
     <meta charset="utf-8">
     <link type="text/css" rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
-    <style type="test/css">
+    <style type="text/css">
       body {
         padding-top: 20px;
         padding-bottom: 40px;
