--- a/index.html
+++ b/index.html
@@ -2,6 +2,14 @@
 <html lang="en">  
   <head>
     <title>My First Bitstater</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combinded.no-icons.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/fond-awesome.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfont.net/startup%2Fcode%2Fsocail-buttons.css">
+    <script src="https://d396qusza40orc.cloudfont.net/startup%2Fcode%2Fjquery.js"></script> 
+    <script src="https://d396qusza40orc.cloudfont.net/startup%2Fcode%2Fbootstrap.js"></script>
+    <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,500italic,700italic,300,400,600,700.800" rel="stylesheet" type="text/css">
     <meta charset="utf-8">
     <link type="text/css" rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
     <style type="text/css">
