--- a/index.html
+++ b/index.html
@@ -10,38 +10,87 @@
     <script src="https://d396qusza40orc.cloudfont.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,500italic,700italic,300,400,600,700.800" rel="stylesheet" type="text/css">
-    <meta charset="utf-8">
-    <link type="text/css" rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css">
+<!--    <meta charset="utf-8">
+    <link type="text/css" rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css"> -->
     <style type="text/css">
+      /* large desktop */
+      @media (min-width: 980px) {
+	body {
+	  padding-top: 60px;
+	}
+	.linediv-l {
+	  border-right: 1px white solid;
+	}
+	.linediv-r {
+	  border-left: 1px white solid;
+        }
+      }
+
+      /* landscape phones and down */
+      @media (max-width: 480px) {
+	.copy {
+	  padding: 2.5% 10%;
+	}
+	.linediv-l {
+	  border-right: 1px white solid;
+	}
+	.linediv-r {
+	  border-left: 1px white solid;
+        }
+      }
+
+      /* all form factors */
       body {
-        padding-top: 20px;
-        padding-bottom: 40px;
+	font-family: 'Open Sans',Helvetica,Arial,sans-serif;
       }
-      .container {
-        width: 960px;
-      }
+      .heading,.subheading {
+	font-family: 'Ubuntu', Helvetica, Arial, sans-serif;
+	text-align: center;
+       }
       p.lead {
-        padding-top: 15px;
+        padding-top: 1.5%;
+	font-size: 24px;
+	line-height: 30px;
       }
-      .navigation, .pitch, .section1, .section2, .faq, .footer {
-        padding: 10px 0px 10px 0px;
+      p {
+	font-size: 18px;
+	line-height: 24px;
       }
-      .video, .thermometer, .order, .social {
-        border: 1px dotted;
+	/* video ptich and action */
+      .pitch {
+        padding: 2.5% 0%;
+      }
+      .order {
+        padding: 2% 0%;
+      }
+      .actions {
+	background-color: #343434;
+        padding: 3% 0%;
+      }
+      .video, .thermometer, .order, .social, .statistics {
         text-align: center;
       }
-      .video {
-        /* internal borders have 1px width, thus need to add 4 x 1px to 120px */
-        height: 124px;
-        line-height: 124px;
+      .statistics h3, .statistics p {
+	color: white;
       }
-      .thermometer, .order, .social {
-        /* line-height to verticall center: http://phrogz.net/css/vertical-align/index.html */
-        height: 40px;
-        line-height: 40px;
+	/* marketing copy and footer */
+      .copy {
+	padding-top: 2.5%;
+	padding-bottom: 2.5%;
+        text-align: justify;
       }
-      div.row {
-        border: 1px solid;
+      .asset {
+	padding: 2.5% 0%;
+      }
+      .footer {
+	color: #cccccc;
+        text-align: center;
+      }
+      .footer p {
+        font-size: 11px;
+      }
+      .footer a {
+        color: #ccccff;
       }
     </style>
   </head>
