--- a/index.html
+++ b/index.html
@@ -95,28 +95,119 @@
     </style>
   </head>
   <body>
+    <!-- mobile-friendly navbar adapted from example. -->
+    <!-- http://twitter.github.io/bootstrap/examples/starter-template.html -->
+    <div class="navbar nvabar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+	<div class="container">
+	  <button type="button" class="btn btn-navnbar" data-toggle="collapse" data-target=".nav-collapse">
+	    <span class="icon-bar"></span>
+	    <span class="icon-bar"></span>
+	    <span class="icon-bar"></span>
+	  </button>
+	  <a class="brand" href="#">Bitstarter</a>
+	  <div class="nav-collapse collapse">
+	    <ul class="nav">
+	      <li class="active"><a href="#">Home</a></li>
+	      <li><a href="#about">About</a></li>
+	      <li><a href="#contact">Contact</a></li>
+	    </ul>
+	  </div>
+	</div>
+      </div>
+    </div>
+
+    <!-- We use row-fluid inside containers to achieve a resizable layout. -->
+    <!-- blogs.endjin.com/2013/04/tips-for-implementing-responsive-designs-using-bootstrap/ -->
+    <!-- http://stackoverflow.com/a/12270322/ -->
     <div class="container">
-      <div class="row navigation">
-	<div class="span2 logo">
-	  Logo
-	</div>
-	<div class="span6 blank">
-	  Blank
-	</div>
-	<div class="span4 about">
-	  About
+      <!-- font and paired font of .heading/.subheading and boody from google fonts -->
+      <!-- www.google.com/fonts/specimen/Ubuntu -->
+      <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
+      <div class="row-fluid heading">
+        <div class="span12">
+	  <h1>Product</h1>
 	</div>
       </div>
-      <div class="row heading">
+      <div class="row-fluid subheading">
 	<div class="span12">
-	  <h1>Bitstarter Title</h1>
+	  <!-- special typography from Bootstrap for lead paragraph -->
+	  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
+	  <p class="lead">One sentence description.</p>
 	</div>
       </div>
-      <div class="row subheading">
-	<div class="span12">
-	  <p class="lead">This is my first bistarter project.</p>
+      <div class="row-fluid pitch">
+	<div class="span5 offset1 video">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	</div>
+	<!-- we define a new 'actions' div to contain statistics, order and share buttons -->
+	<div class="span5 actions">
+	  <div class="span8 offset2">
+	    <div class="statistics">
+	      <div class="span4">
+		<!-- linediv-l and linediv-r give dividing lines taht look different in hor and ver layouts, illustrating media queries -->
+		<div class="linediv-l">
+		  <h3>1000</h3> <p>backers</p>
+		</div>
+	      </div>
+	      <div class="span4">
+		<div class="linediv-c">
+		  <h3>$6000</h3> <p>of $10,000</p>
+		</div>
+	      </div>
+	      <div class="span4">
+		<div class="linediv-r">
+		  <h3>10</h3> <p>days left</p>
+		</div>
+	      </div>
+	    </div>
+	  </div>
+	  <div class="span10 offset1">
+	    <!-- bootstrap progress bar -->
+	    <!-- http://twitter.github.io/bootstrap/components.html#progress -->
+	    <div class="thermometer progress active">
+	      <div class="bar bar-success" style="width: 60%;"></div>
+	      <div class="bar bar-warning" style="width: 40%;"></div>
+	    </div>
+	  </div>
+	  <div class="span6 offset3 order">
+	    <!-- bootstrap button -->
+	    <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
+	    <button class="btn btn-success btn-large">Preorder</button>
+	  </div>
+	  <div class="span8 offset2 social">
+	    <!-- social buttons are not included in the default bootstrap -->
+	    <!-- see: http://noizwaves.github.io/bootstrap-social-buttons -->
+	    <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
+	    <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
+	  </div>
 	</div>
       </div>
+
+      <!-- beyond this point the marketing copy begins. -->
+      <!-- https://developer.mozilla.org/en-US/docs/Web/CSS/text-align -->
+      <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
+      <div class="row-fluid section1">
+	<div class="span5 offset1 asset">
+	  <img class="img-polaroid" src="http://placeholder.it/480x300">
+	</div>
+        <div class="span5 copy">
+	  <p>
+	    Lorem ipsum dolor sit amet
+	  </p>
+	</div>
+      </div>
+      </div>
+      <div class="row-fluid section2">
+ 	<div class="span5 offset1 copy copy-right">
+	  <p>
+	    Lorem ipsum dolor sit amet
+	  </p>
+      </div>
+      <div class="span5 asset">
+	<img class="img-polaroid" src="http://placeholder.it/480x300">
+      </div>
+    </div>
       <div class="row pitch">
  	<div class="span6 video">
 	  Video
