--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
       <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img-polaroid" src="http://placeholder.it/480x300">
+	  <img class="img-polaroid" src="http://placehold.it/480x300">
 	</div>
         <div class="span5 copy">
 	  <p>
@@ -205,12 +205,57 @@
 	  </p>
       </div>
       <div class="span5 asset">
-	<img class="img-polaroid" src="http://placeholder.it/480x300">
+	<img class="img-polaroid" src="http://placehold.it/480x300">
       </div>
     </div>
-      <div class="row pitch">
- 	<div class="span6 video">
-	  Video
+    <!-- For the FAQ, we introduce a little bit of JS, using the accordian -->
+    <!-- This brings in jquery.js and bootstrap.js as dependencies.-->
+    <!-- http://twitter.github.io/bootstrap/javascript.html#collapse -->    
+    <div class="row-fluid faq">
+      <div class="span10 offset1">
+	  <h3>FAQ</h3>
+	  <div class="accordion" id="accordion2">
+	    <div class="accordion-group">
+	      <div class="accordion-heading">
+		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
+		  What does FAQ stand for?
+		</a>
+	      </div>
+	      <div id="collapseOne" class="accordion-body callopse">
+		<div class="accordion-inner">
+		  Frequently Asked Question.
+		</div>
+	      </div>
+	    </div>
+	    <div class="accordion-group">
+	      <div class="accordion-heading">
+		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
+		  What is a Frequently Asked Question?
+		</a>
+	      </div>
+	      <div id="collapseTwo" class="accordion-body callopse">
+		<div class="accordion-inner">
+		  A question which is commonly asked by users.
+		</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+      </div>
+
+      <!-- CC By-SA 3.0 license -->
+      <!-- http://creativecommons.org/licenses/ -->
+      <div class="row-fluid footer">
+	<div class="span12">
+	  <p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>
+	  ,without all the cruft that would otherwise be put at the bottom of the page.</p>
+	</div>
+      </div>
+    </div>
+  </body>
+</html>
+
+
 	</div>
 	<div class="span6">
 	  <div class="thermometer">
