--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <title>My First Bitstater</title>
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combinded.no-icons.min.css">
-    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/fond-awesome.css">
-    <link rel="stylesheet" href="https://d396qusza40orc.cloudfont.net/startup%2Fcode%2Fsocail-buttons.css">
-    <script src="https://d396qusza40orc.cloudfont.net/startup%2Fcode%2Fjquery.js"></script> 
-    <script src="https://d396qusza40orc.cloudfont.net/startup%2Fcode%2Fbootstrap.js"></script>
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
+    <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
+    <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fsocial-buttons.css">
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
+    <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,500italic,700italic,300,400,600,700.800" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
 <!--    <meta charset="utf-8">
     <link type="text/css" rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css"> -->
     <style type="text/css">
@@ -193,15 +193,14 @@
 	</div>
         <div class="span5 copy">
 	  <p>
-	    Lorem ipsum dolor sit amet
-	  </p>
+	  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id laoreet justo. Curabitur iaculis elementum dolor sit amet fringilla. Sed est dolor, viverra at velit in, gravida porttitor dui. Proin posuere scelerisque placerat. Aenean vitae tempor lorem, feugiat tincidunt sem. Aenean adipiscing pulvinar nulla interdum auctor. In hac habitasse platea dictumst. Vestibulum eu tristique dolor. Aliquam id aliquet sapien. Sed fringilla, sem ullamcorper sollicitudin ultrices, massa nunc ullamcorper sapien, laoreet molestie sem sapien sit amet ligula.
+          </p>
 	</div>
-      </div>
       </div>
       <div class="row-fluid section2">
  	<div class="span5 offset1 copy copy-right">
 	  <p>
-	    Lorem ipsum dolor sit amet
+	    Aliquam pellentesque nisi ut eros dictum, eget tincidunt lectus tempus. Proin vitae purus eu nisl hendrerit vestibulum a a felis. Proin interdum lobortis lorem sollicitudin malesuada. Ut non massa et lacus vehicula lobortis. Morbi sem erat, posuere eget sodales ut, rhoncus vitae sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent convallis neque vitae pulvinar commodo. Quisque tellus risus, convallis et arcu eget, lobortis gravida mi. Integer purus tellus, dictum et interdum non, faucibus sed eros. Vestibulum ante eros, rutrum id volutpat at, sagittis id ipsum. Aliquam pulvinar turpis nec nibh molestie, vitae laoreet erat ultricies. Nullam lacinia diam nec magna commodo molestie. Nullam ut mollis massa.
 	  </p>
       </div>
       <div class="span5 asset">
@@ -249,44 +248,6 @@
 	<div class="span12">
 	  <p>This work is licensed under the <a href="http://creativecommons.org/licenses/by-sa/3.0/">CC By-SA 3.0</a>
 	  ,without all the cruft that would otherwise be put at the bottom of the page.</p>
-	</div>
-      </div>
-    </div>
-  </body>
-</html>
-
-
-	</div>
-	<div class="span6">
-	  <div class="thermometer">
-   	     Thermometer
-	  </div>
-	  <div class="order">
-	    Order
-	  </div>
-	  <div class="social">
-	    Social
-	  </div>
-	</div>
-      </div>
-      <div class="row section1">
-	<div class="span12">
-	  Marketing Section 1
-	</div>
-      </div>
-      <div class="row section2">
-	<div class="span12">
-	  Marketing Section 2
-	</div>
-      </div>
-      <div class="row faq">
-	<div class="span12">
-	  FAQ
-	</div>
-      </div>
-      <div class="row footer">
-	<div class="span12">
-	  Footer
 	</div>
       </div>
     </div>
