--- a/index.html
+++ b/index.html
@@ -1,7 +1,55 @@
 <!DOCTYPE>
 <html lang="en">  
   <head>
-    <title>My First Bitstater</title>
+    <title>Yeetta Mon</title>
+    <!-- google chart stuff -->
+    <script type='text/javascript' src='https://www.google.com/jsapi'></script>
+    <script type='text/javascript'>
+      google.load('visualization', '1', {packages:['gauge']});
+      google.setOnLoadCallback(drawChart);
+      function drawChart() {
+        var data = google.visualization.arrayToDataTable([
+          ['Label', 'Value'],
+          ['Memory', 80],
+          ['CPU', 55],
+          ['Network', 68]
+        ]);
+
+        var options = {
+          width: 400, height: 120,
+          redFrom: 90, redTo: 100,
+          yellowFrom:75, yellowTo: 90,
+          minorTicks: 5
+        };
+
+        var chart = new google.visualization.Gauge(document.getElementById('chart_gauge'));
+        chart.draw(data, options);
+      }
+    </script>
+    <script type='text/javascript' src='https://www.google.com/jsapi'></script>
+    <script type='text/javascript'>
+     google.load('visualization', '1', {'packages': ['geochart']});
+     google.setOnLoadCallback(drawRegionsMap);
+
+      function drawRegionsMap() {
+        var data = google.visualization.arrayToDataTable([
+          ['Country', 'Average DNS Repsonse Time'],
+          ['Germany', 57],
+          ['United States', 34],
+          ['Brazil', 86],
+          ['Canada', 45],
+          ['France', 101],
+          ['RU', 123]
+        ]);
+
+        var options = {};
+
+        var chart = new google.visualization.GeoChart(document.getElementById('chart_geo'));
+        chart.draw(data, options);
+    };
+    </script>
+
+    <!-- end google chart -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="stylesheet" href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-combined.no-icons.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
@@ -9,7 +57,7 @@
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fjquery.js"></script>
     <script src="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap.js"></script>
     <link href="http://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700,300italic,400italic,500italic,700italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Droid+Sans:300italic,400italic,600italic,700italic,300,400,600,700,800" rel="stylesheet" type="text/css">
 <!--    <meta charset="utf-8">
     <link type="text/css" rel="stylesheet" href="http://twitter.github.com/bootstrap/assets/css/bootstrap.css"> -->
     <style type="text/css">
@@ -126,19 +174,21 @@
       <!-- www.google.com/fonts/specimen/Ubuntu#pairings -->
       <div class="row-fluid heading">
         <div class="span12">
-	  <h1>Product</h1>
+	  <h1>Yeetta Mon</h1>
 	</div>
       </div>
       <div class="row-fluid subheading">
 	<div class="span12">
 	  <!-- special typography from Bootstrap for lead paragraph -->
 	  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-	  <p class="lead">One sentence description.</p>
+	  <p class="lead">Service Monitoring Anywhere, Anytime.</p>
 	</div>
       </div>
       <div class="row-fluid pitch">
 	<div class="span5 offset1 video">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <!-- <img class="img-polaroid" src="http://placehold.it/480x300"> -->
+	  <p>Central cloud based monitoring of all your servers and services. All vital data in one place.</p>
+	  <div id='chart_gauge'></div>
 	</div>
 	<!-- we define a new 'actions' div to contain statistics, order and share buttons -->
 	<div class="span5 actions">
@@ -147,17 +197,17 @@
 	      <div class="span4">
 		<!-- linediv-l and linediv-r give dividing lines taht look different in hor and ver layouts, illustrating media queries -->
 		<div class="linediv-l">
-		  <h3>1000</h3> <p>backers</p>
+		  <h3>2</h3> <p>backers</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-c">
-		  <h3>$6000</h3> <p>of $10,000</p>
+		  <h3>$20</h3> <p>of $5,000</p>
 		</div>
 	      </div>
 	      <div class="span4">
 		<div class="linediv-r">
-		  <h3>10</h3> <p>days left</p>
+		  <h3>30</h3> <p>days left</p>
 		</div>
 	      </div>
 	    </div>
@@ -166,14 +216,14 @@
 	    <!-- bootstrap progress bar -->
 	    <!-- http://twitter.github.io/bootstrap/components.html#progress -->
 	    <div class="thermometer progress active">
-	      <div class="bar bar-success" style="width: 60%;"></div>
-	      <div class="bar bar-warning" style="width: 40%;"></div>
+	      <div class="bar bar-success" style="width: 1%;"></div>
+	      <div class="bar bar-warning" style="width: 99%;"></div>
 	    </div>
 	  </div>
 	  <div class="span6 offset3 order">
 	    <!-- bootstrap button -->
 	    <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-	    <button class="btn btn-success btn-large">Preorder</button>
+	    <button class="btn btn-success btn-large">Back us now!</button>
 	  </div>
 	  <div class="span8 offset2 social">
 	    <!-- social buttons are not included in the default bootstrap -->
@@ -189,22 +239,38 @@
       <!-- http://twitter.github.io/bootstrap/base-css.html#images -->
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
-	  <img class="img-polaroid" src="http://placehold.it/480x300">
+	  <!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
+	  <p>Choose your visualisations to represent your collected data</p>
+	  <!-- <div id="chart_geo" style="width: 900px; height: 500px;"></div> -->
+	  <div id="chart_geo"></div>
 	</div>
         <div class="span5 copy">
 	  <p>
-	  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque id laoreet justo. Curabitur iaculis elementum dolor sit amet fringilla. Sed est dolor, viverra at velit in, gravida porttitor dui. Proin posuere scelerisque placerat. Aenean vitae tempor lorem, feugiat tincidunt sem. Aenean adipiscing pulvinar nulla interdum auctor. In hac habitasse platea dictumst. Vestibulum eu tristique dolor. Aliquam id aliquet sapien. Sed fringilla, sem ullamcorper sollicitudin ultrices, massa nunc ullamcorper sapien, laoreet molestie sem sapien sit amet ligula.
+	  Pledge $5 or more
+	  <p>
+	  Free access to monitor 5 metrics for life
           </p>
+	  </p>
 	</div>
       </div>
       <div class="row-fluid section2">
  	<div class="span5 offset1 copy copy-right">
 	  <p>
-	    Aliquam pellentesque nisi ut eros dictum, eget tincidunt lectus tempus. Proin vitae purus eu nisl hendrerit vestibulum a a felis. Proin interdum lobortis lorem sollicitudin malesuada. Ut non massa et lacus vehicula lobortis. Morbi sem erat, posuere eget sodales ut, rhoncus vitae sapien. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Praesent convallis neque vitae pulvinar commodo. Quisque tellus risus, convallis et arcu eget, lobortis gravida mi. Integer purus tellus, dictum et interdum non, faucibus sed eros. Vestibulum ante eros, rutrum id volutpat at, sagittis id ipsum. Aliquam pulvinar turpis nec nibh molestie, vitae laoreet erat ultricies. Nullam lacinia diam nec magna commodo molestie. Nullam ut mollis massa.
+Yeetta Mon will provide you a central place for all your server and service metrics data. Standard monitoring is provided for your servers, CPU, Network and memory usage. But where Yeetta Mon comes really into play is to monitor how the world sees your services using advanced URL data retreival for your business critical services. For this purpose Yeetta Mon will have probes at strategic locations around the world.
 	  </p>
       </div>
       <div class="span5 asset">
 	<img class="img-polaroid" src="http://placehold.it/480x300">
+      </div>
+    </div>
+    <div class="row-fluid section1">
+      <div class="span10 offset1">
+	<h2>$5,000 pledge</h2>
+	<p>This will provide the basic infrastructure with probes in 3 locations (1 US, 2 Europa). A simple agent for Unix based servers and HTTP URL monitoring</p>
+	<h2>$12,000 pledge</h2>
+	<p>This will furthermore provide 2 locations in Asia for probes. A more advanced agent and detailed DNS server monitoring</p>
+	<h2>$20,000 pledge</h2>
+	<p>This will make development of an API possible. All metrics that Yeetta Mon uses will be available for you to use.</p>
       </div>
     </div>
     <!-- For the FAQ, we introduce a little bit of JS, using the accordian -->
@@ -217,24 +283,24 @@
 	    <div class="accordion-group">
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseOne">
-		  What does FAQ stand for?
+		  Does Yeetta Mon require an agent to be installed?
 		</a>
 	      </div>
 	      <div id="collapseOne" class="accordion-body callopse">
 		<div class="accordion-inner">
-		  Frequently Asked Question.
+		  For some data yes, but we can provide many visualisations without agents on your local servers.
 		</div>
 	      </div>
 	    </div>
 	    <div class="accordion-group">
 	      <div class="accordion-heading">
 		<a class="accordion-toggle" data-toggle="collapse" data-parent="#accordion2" href="#collapseTwo">
-		  What is a Frequently Asked Question?
+		  Can I have a local collector or does every agent/service send data to Yeetta Mon?
 		</a>
 	      </div>
 	      <div id="collapseTwo" class="accordion-body callopse">
 		<div class="accordion-inner">
-		  A question which is commonly asked by users.
+		  You can install a "Concentrator" at each of your sites, which in turn forwards all data to Yeetta Mon.
 		</div>
 	      </div>
 	    </div>
