--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 	<div class="span12">
 	  <!-- special typography from Bootstrap for lead paragraph -->
 	  <!-- http://twitter.github.io/bootstrap/base-css.html#typography -->
-	  <p class="lead">Service Monitoring Anywhere, Anytime.</p>
+	  <p class="lead">Service Monitoring Anywhere, Anytime, Anyway.</p>
 	</div>
       </div>
       <div class="row-fluid pitch">
