Fixed some capitilisations of text, noted in staging review

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
       <div class="row-fluid pitch">
 	<div class="span5 offset1 video">
 	  <!-- <img class="img-polaroid" src="http://placehold.it/480x300"> -->
-	  <p>Central cloud based monitoring of all your servers and services. All vital data in one place.</p>
+	  <p>Cloud based monitoring of all your servers and services. All vital data in one place.</p>
 	  <div id='chart_gauge'></div>
 	</div>
 	<!-- we define a new 'actions' div to contain statistics, order and share buttons -->
@@ -240,7 +240,7 @@
       <div class="row-fluid section1">
 	<div class="span5 offset1 asset">
 	  <!--<img class="img-polaroid" src="http://placehold.it/480x300">-->
-	  <p>Choose your visualisations to represent your collected data</p>
+	  <p>Choose your visualisations to represent your collected data.</p>
 	  <!-- <div id="chart_geo" style="width: 900px; height: 500px;"></div> -->
 	  <div id="chart_geo"></div>
 	</div>
