--- a/index.html
+++ b/index.html
@@ -332,5 +332,15 @@ Yeetta Mon will provide you a central place for all your server and service metr
 	</div>
       </div>
     </div>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    
+      ga('create', 'UA-42892348-1', 'yeettamon.net');
+      ga('send', 'pageview');
+    
+    </script>
   </body>
 </html>
