added coinbase pay button

--- a/index.html
+++ b/index.html
@@ -258,6 +258,12 @@
 	    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
 	    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51fa388424e9251a"></script>
 	    <!-- AddThis Button END -->
+	    <a class="coinbase-button" 
+		data-button-style="custom_large"
+		data-button-text="Preorder with Bitcoin"
+		data-code="2af39d2e64df65f4f59d8f6a368350be" 
+		href="https://coinbase.com/checkouts/2af39d2e64df65f4f59d8f6a368350be">Preorder With Bitcoin</a>
+	    <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 	  </div>
 	</div>
       </div>
