--- a/index.html
+++ b/index.html
@@ -241,11 +241,17 @@
 	  <div class="span6 offset3 order">
 	    <!-- bootstrap button -->
 	    <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-	    <button class="btn btn-success btn-large">Back us now!</button>
+	    <!-- <button class="btn btn-success btn-large">Back us now!</button> -->
 	  </div>
 	  <div class="span8 offset2 social">
 	    <!-- social buttons are not included in the default bootstrap -->
 	    <!-- see: http://noizwaves.github.io/bootstrap-social-buttons -->
+	    <a class="coinbase-button" 
+		data-button-style="custom_large"
+		data-button-text="Preorder with Bitcoin"
+		data-code="2af39d2e64df65f4f59d8f6a368350be" 
+		href="https://coinbase.com/checkouts/2af39d2e64df65f4f59d8f6a368350be">Preorder With Bitcoin</a>
+	    <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 	    <!-- AddThis Button BEGIN -->
 	    <div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 	      <a class="addthis_button_preferred_1"></a>
@@ -258,12 +264,6 @@
 	    <script type="text/javascript">var addthis_config = {"data_track_addressbar":true};</script>
 	    <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-51fa388424e9251a"></script>
 	    <!-- AddThis Button END -->
-	    <a class="coinbase-button" 
-		data-button-style="custom_large"
-		data-button-text="Preorder with Bitcoin"
-		data-code="2af39d2e64df65f4f59d8f6a368350be" 
-		href="https://coinbase.com/checkouts/2af39d2e64df65f4f59d8f6a368350be">Preorder With Bitcoin</a>
-	    <script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
 	  </div>
 	</div>
       </div>
